--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "embla-carousel-react": "^8.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.554.0",
-    "next": "^16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
